@startuml
!theme plain
hide empty members

class User {
+ Id : Integer
+ Email : String
+ Username : String
+ PasswordHash : String
+ Color : String
+ MaxThoughts : Integer
}

class Thought {
+ Id : Integer
+ AuthorId : Integer
+ Title : String
+ Content : String
+ DateCreated : DateTime
+ SizeMultiplier : Integer
}

class ThoughtReference {
+ Id : Integer
+ SourceId : Integer
+ TargetId : Integer
}

User "1" o- "0..*" Thought : "Author"

Thought "1" o-- "0..*" ThoughtReference : "Outgoing References"
Thought "1" --o "0..5" ThoughtReference : "Incoming References"
@enduml